--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StoryActivity"></activity>
+        <activity android:name=".WriteStoryActivity"></activity>
+        <activity android:name=".StoryActivity" />
         <activity android:name=".ReadActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
